fixed search-bar width on small screens :art:

--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
 }
 
 html {
-    font-family: arial, sans-serif;
-    
+	font-family: arial, sans-serif;
 }
 
 .main-container {
@@ -15,45 +14,45 @@ html {
 
 nav {
 	padding: 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 8vh;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 8vh;
 }
 
 .nav-item {
 	list-style: none;
-    font-size: 13px;
-    color: black;
-    opacity: 0.87;
-    font-weight: 200;
-    display: inline-block;
+	font-size: 13px;
+	color: black;
+	opacity: 0.87;
+	font-weight: 200;
+	display: inline-block;
 }
 
 .left .nav-item {
-    margin-left: 15px;
+	margin-left: 15px;
 }
 .right .nav-item {
-    margin-right: 15px;
+	margin-right: 15px;
 }
 
 .right .nav-item:last-child {
-    margin-right: 20px;
+	margin-right: 20px;
 }
 
 .nav-item-white {
-    color: white;
-    font-weight: bold;
+	color: white;
+	font-weight: bold;
 }
 
 .nav-item:hover {
-    border-bottom: 1px solid #5f6368;
+	border-bottom: 1px solid #5f6368;
 }
 
 .btn-sign-in {
-    padding: 8px 13px 7px;
-    border: 1px solid #4285f4;
-    background: #4386fa;
+	padding: 8px 13px 7px;
+	border: 1px solid #4285f4;
+	background: #4386fa;
 	border-radius: 4px;
 }
 
@@ -74,6 +73,9 @@ header {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -69%); /* IDENTICNO */
+	max-width: 602px; /* search bar width + padding */
+	padding: 0 10px;
+	width: 100%;
 }
 
 .google-logo {
@@ -82,13 +84,12 @@ header {
 }
 
 .search-bar {
-	width: 582px;
+	width: 100%;
 	height: 44px;
 	border-radius: 100px;
 	border: 1px solid #dfe1e5;
 	box-shadow: none;
 	padding: 5px 15px;
-	margin: 0 auto;
 }
 
 .search-bar:hover {
@@ -106,8 +107,8 @@ a:active,
 a:hover,
 a:visited {
 	text-decoration: none;
-    border: none;
-    color: inherit;
+	border: none;
+	color: inherit;
 }
 
 .buttons a:link,
